# VoiceQC

./: .dockerignore  .env.example  .gitattributes  .gitignore  1-install-tools.command  2-setup.command  DEPLOY-VERCEL.md  DEPLOY.md  DESIGN.md  Makefile  README.md  SETUP-MAC.md  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  reset-login.command  start.command  stop.command
apps/api/: .env.example  pyproject.toml
apps/api/app/: auth.py  db.py  deps.py  emails.py  main.py  permissions.py  queue.py  ratelimit.py  schemas.py  settings.py
apps/api/app/routers/: admin.py  admin_sso.py  admin_users.py  asr_audio.py  auth.py  batches.py  checklist.py  config.py  criteria.py  evaluations.py  fields.py  health.py  insights.py  kb.py  me.py  projects.py  recon.py  recordings.py  terms.py  transactions.py
apps/api/tests/: test_batch_rerun.py  test_health.py
apps/web/: .env.example  .gitignore  next.config.mjs  package.json  tailwind.config.ts
apps/web/src/: auth.config.ts  auth.ts  middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(dashboard)/: _data.ts  layout.tsx
apps/web/src/app/(dashboard)/admin/: admin-tabs.tsx  audit-section.tsx  page.tsx  sso-section.tsx  usage-section.tsx  users-section.tsx
apps/web/src/app/(dashboard)/agents/: page.tsx
apps/web/src/app/(dashboard)/batches/: bulk-batch-actions.tsx  filters.tsx  new-batch-button.tsx  page.tsx
apps/web/src/app/(dashboard)/dashboard/: insights-section.tsx  page.tsx
apps/web/src/app/(dashboard)/evaluator/: evaluator-tabs.tsx  generate-panel.tsx  page.tsx
apps/web/src/app/(dashboard)/recon/: badges.tsx  (+3 more)
apps/web/src/components/: delete-batch-button.tsx  linked-row.tsx  metric-bar.tsx  nav-links.tsx  nav.tsx  pagination.tsx  project-switcher.tsx  reason-badge.tsx  sparkline.tsx  status-badge.tsx  status-legend.tsx  theme-toggle.tsx
apps/web/src/components/ui/: badge.tsx  card.tsx  dialog.tsx  select.tsx  sheet.tsx  switch.tsx  table.tsx
apps/web/src/lib/: api.ts  crypto.ts  db.ts  format.ts  project.ts  roles.ts  score.ts  status-meta.ts  types.ts
apps/web/src/types/: next-auth.d.ts
apps/worker/: .env.example  pyproject.toml
apps/worker/tests/: test_dashscope_schema.py  test_evaluation_idempotency.py  test_ingest_metadata.py  test_monitoring.py  test_mono_speaker_repair.py  test_pipeline_auto_retry.py  test_recon_engine.py  test_recon_rules.py  test_trade_extraction.py
apps/worker/worker/: audio.py  celery_app.py  db.py  kb.py  mono_speaker_repair.py  settings.py  trade_normalization.py
apps/worker/worker/asr/: base.py  factory.py  gemini_audio.py  google_batch.py  qwen_asr.py  tencent_asr.py
apps/worker/worker/llm/: base.py  dashscope.py  embeddings.py  factory.py  fallback.py  gemini.py
apps/worker/worker/recon/: engine.py
apps/worker/worker/tasks/: batch.py  evaluate.py  evaluator.py  ingest.py  kb.py  maintenance.py  monitoring.py  ping.py  pipeline.py  recon.py  txn.py
data/: voiceqa.sql
infra/: docker-compose.yml  gcs-cors.json
infra/docker/: Dockerfile  start-worker.sh
infra/migrations/: alembic.ini  env.py
infra/migrations/versions/: 0001_authjs_users.py  0002_admin_tables.py  0003_pipeline_tables.py  0004_evaluation_tables.py  0005_txn_recon_tables.py  0006_sso_config.py  0007_recordings_gcs_nullable.py  0008_recording_client_identity.py  0009_projects.py  0010_evaluation_analytics.py  0011_checklist.py  0012_kb_correctness.py  0013_recording_broker_name.py  0014_quam_recon_mapping.py  0015_bulk_batch_rerun.py
infra/postgres/: init.sql
infra/seed/: seed.py
mocks/: README.md  generate_eod_files.py
mocks/backoffice_api/: main.py
mocks/data/: brokers.csv  golden_day.json  industry_terms.csv  mapping_template.json  mapping_template_quam.json
mocks/recorder/: generate_recordings.py
scripts/: backfill_broker_names_from_extensions.py  backfill_may13_client_accounts.py  backfill_recording_broker_names.py  backfill_trade_instruction_fields.py  bootstrap.sh  cer.py  codegen.sh  spike_stt.py
shared/: pyproject.toml
shared/tests/: test_txn_sources.py
shared/voiceqa_shared/: asr_audio_proxy.py  audit.py  crypto.py  db_models.py  gcs.py  llm_usage.py  passwords.py  recon_scope.py  settings.py  txn_sources.py
(+26 files in other folders)
