[project]
name = "voiceqa-shared"
version = "0.0.1"
requires-python = ">=3.12"
description = "Shared SQLAlchemy models, settings, and helpers for apps/api and apps/worker."
dependencies = [
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.5",
  "argon2-cffi>=23.1",
  "google-cloud-storage>=2.18",
  "cryptography>=43",
  "httpx>=0.27",
  "openpyxl>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voiceqa_shared"]
