[project]
name = "voiceqa-api"
version = "0.0.1"
requires-python = ">=3.12"
description = "FastAPI backend for Quam VoiceQA."
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.5",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "redis>=5.2",
  "celery[redis]>=5.4",
  "cryptography>=43",
  "python-dotenv>=1.0",
  "loguru>=0.7",
  "python-multipart>=0.0.12",
  "slowapi>=0.1.9",
  "voiceqa-shared",
  "pypdf>=6.13.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "anyio>=4.6",
]

[tool.uv.sources]
voiceqa-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
